--- a/src/components/common/Card.astro
+++ b/src/components/common/Card.astro
@@ -1,4 +1,6 @@
 ---
+import '../../styles/gobal.css'
+
 // Getting props
 const { title, description, imageUrl, day, modality, hours, id, price } = Astro.props;
 ---
@@ -40,29 +42,32 @@ const { title, description, imageUrl, day, modality, hours, id, price } = Astro.
   </div>
   
   <!-- Contenedor de información -->
-  <div class="bg-white p-6 flex flex-col flex-grow">
-    <h2 class="text-3xl font-bold text-customBlue mb-2 h-fit line-clamp-2">
-      {title}
-    </h2>
-    <p class="text-gray-700 mb-4 line-clamp-2" set:html={description}></p>
-  
-    <div class="flex flex-wrap gap-2 mb-6 mt-auto">
-      <span class="bg-gray-200 text-gray-900 px-3 py-1 border-2 border-customBlue rounded-full text-xs font-bold">
-        Horarios: <span class="font-medium text-gray-600">{hours}</span>
-      </span>
-      <span class="bg-gray-200 text-gray-900 px-3 py-1 border-2 border-customBlue rounded-full text-xs font-bold">
-        Modalidad: <span class="font-medium text-gray-600">{modality}</span>
-      </span>
-      <span class="bg-gray-200 text-gray-900 px-3 py-1 border-2 border-customBlue rounded-full text-xs font-bold">
-        Día: <span class="font-medium text-gray-600">{day}</span>
-      </span>
+    <div class="bg-white p-6 flex flex-col flex-grow">
+      <h2 class="text-3xl font-bold text-customBlue mb-2 h-fit min-h-[72px] line-clamp-2">
+        {title}
+      </h2>
+        <div class="line-clamp-3 mb-4">
+        <p class="text-gray-700" set:html={description}></p>
+      </div>
+
+      <div class="flex flex-wrap gap-2 mb-6 mt-auto">
+        <span class="bg-gray-200 text-gray-900 px-3 py-1 border-2 border-customBlue rounded-full text-xs font-bold">
+          Horarios: <span class="font-medium text-gray-600">{hours}</span>
+        </span>
+        <span class="bg-gray-200 text-gray-900 px-3 py-1 border-2 border-customBlue rounded-full text-xs font-bold">
+          Modalidad: <span class="font-medium text-gray-600">{modality}</span>
+        </span>
+        <span class="bg-gray-200 text-gray-900 px-3 py-1 border-2 border-customBlue rounded-full text-xs font-bold">
+          Día: <span class="font-medium text-gray-600">{day}</span>
+        </span>
+      </div>
+
+      <div class="flex justify-between items-center">
+        <span class="text-sm font-semibold text-gray-400">$ {price}</span>
+        <a href={`/cursos/post/${id}`} class="underline text-sm font-semibold">Leer más</a>
+      </div>
     </div>
-  
-    <div class="flex justify-between items-center">
-      <span class="text-sm font-semibold text-gray-400">$ {price}</span>
-      <a href={`/cursos/post/${id}`} class="underline text-sm font-semibold">Leer más</a>
-    </div>
-  </div>
+
 </div>
 
 
