--- a/src/components/common/CardGrid.astro
+++ b/src/components/common/CardGrid.astro
@@ -11,7 +11,7 @@ const posts = querySnapshot.docs.map(doc => ({
 }));
 ---
 
-<div class="grid gap-4 p-4 sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 2xl:grid-cols-5">
+<div class="grid gap-4 p-4 sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-2 lg:mx-6 lg:gap-x-8 xl:grid-cols-3 2xl:grid-cols-4">
   {posts.map((post) => (
     <Card
       title={post.title}
