--- a/src/styles/gobal.css
+++ b/src/styles/gobal.css
@@ -51,3 +51,10 @@
     margin-right: 12px;
   }
   
+  .descriptionCard {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 3;
+    line-clamp: 3;
+  }
