--- a/src/components/common/CardGrid.astro
+++ b/src/components/common/CardGrid.astro
@@ -1,7 +1,7 @@
 ---
 import { db } from '../../firebase/client';
 import { collection, getDocs } from 'firebase/firestore';
-import Card from './Card.astro';
+import Card from './Card';
 
 const postsCollection = collection(db, 'posts');
 const querySnapshot = await getDocs(postsCollection);
@@ -11,7 +11,7 @@ const posts = querySnapshot.docs.map(doc => ({
 }));
 ---
 
-<div class="grid gap-4 p-4 sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-2 lg:mx-6 lg:gap-x-8 xl:grid-cols-3 2xl:grid-cols-4">
+<div class="grid gap-4 p-4 sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-2 lg:mx-6 lg:gap-x-8 xl:grid-cols-4 2xl:grid-cols-4 mb-16">
   {posts.map((post) => (
     <Card
       title={post.title}
@@ -22,6 +22,7 @@ const posts = querySnapshot.docs.map(doc => ({
       modality={post.modality}
       hours={post.hours}
       id={post.id}
+      client:only
     />
   ))}
 </div>
