--- a/src/layouts/LayoutHome.astro
+++ b/src/layouts/LayoutHome.astro
@@ -1,16 +1,17 @@
 ---
 import Header from '../components/layout/Header.astro';
-import Nav from '../components/layout/MobileNav.jsx';
 import ViewTransitions from 'astro/components/ViewTransitions.astro';
 import Footer from '../components/layout/Footer.astro';
 import LoadingSpinner from '../components/common/LoadingSpinner.jsx';
 import '../styles/gobal.css';
+import MostrarNav from '../components/layout/MostrarNav'
 
 interface Props {
 	title: string;
 }
 
 const { title } = Astro.props;
+
 ---
 
 <!doctype html>
@@ -27,7 +28,9 @@ const { title } = Astro.props;
 		<LoadingSpinner client:load/>
 		<ViewTransitions />
 		<Header />
-		<Nav client:load/>
+
+		<MostrarNav client:load />
+
 		<slot />
 		<Footer 
 		logoSrc="/media/cechLogo.png"
