--- a/src/pages/noLoggedIn.astro
+++ b/src/pages/noLoggedIn.astro
@@ -3,11 +3,23 @@ import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout title="Página no autenticada">
-  <main class="container mx-auto mt-8 p-4 h-screen">
-    <h1 class="text-3xl font-bold mb-4">Página no autenticada</h1>
-    <p class="mb-4">
-      Esta página no está disponible para usuarios no autenticados. Por favor, autentique-se para acceder a esta página.
-    </p>
-    <a href="/" class="font-medium text-indigo-600 hover:text-indigo-500">Volver a la página principal</a>
+  <main class="flex items-center justify-center my-auto">
+    <div class="bg-white p-8 rounded-lg shadow-lg max-w-md text-center border border-blue-200">
+      <img 
+        src="/path/to/nursing-icon.png" 
+        alt="Icono de enfermería" 
+        class="mx-auto mb-4 h-16 w-16" 
+      />
+      <h1 class="text-3xl font-bold text-blue-600 mb-4">Acceso Denegado</h1>
+      <p class="mb-4 text-gray-700">
+        Esta página no está disponible para usuarios no autenticados. 
+        Por favor, autentíquese para acceder a esta página.
+      </p>
+      <a 
+        href="/" 
+        class="mt-4 inline-block bg-blue-600 text-white py-2 px-4 rounded hover:bg-blue-500 transition duration-300">
+        Volver a la página principal
+      </a>
+    </div>
   </main>
 </Layout>
