errores de consola

--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -12,7 +12,7 @@ import HeaderContent from '../common/HeaderContent.jsx';
     loginButtonText="Iniciar Sesión"
     client:only="react" />
   </div>
-  <LoginModal client:load />
-  <RegisterModal client:load />
+  <LoginModal client:only="react" />
+  <RegisterModal client:only="react" />
 </header>
 
