--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -25,11 +25,11 @@ const { title } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body class="flex flex-col flex-grow h-screen">
-		<LoadingSpinner client:load />
+		<LoadingSpinner client:only="react" />
 		<ViewTransitions />
 		<Header />
 
-		<MostrarNav client:load />
+		<MostrarNav client:only="react" />
 		
 		<slot />
 		<Footer 
