--- a/src/pages/admin/dashboard.astro
+++ b/src/pages/admin/dashboard.astro
@@ -1,15 +1,15 @@
 ---
 // src/pages/admin/dashboard.astro
 import Layout from '../../layouts/Layout.astro';
-import UserTable from '../../components/admin/UserTable';
+import Vista from '../../components/views/ViewTablaAdmin';
 import RouteGuard from '../../components/auth/ProtectedRole';
 ---
 
 <RouteGuard client:only="react">
   <Layout title="Dashboard de Admin">
-    <main class="container mx-auto mt-8 p-4 h-screen">
+    <main class="container mx-auto mt-8 p-4 h-screen ">
       <h1 class="text-3xl font-bold mb-4">Dashboard de Admin</h1>
-      <UserTable client:only="react" />
+        <Vista client:only="react" />
     </main>
   </Layout>
 </RouteGuard>
