--- a/src/pages/cursos/index.astro
+++ b/src/pages/cursos/index.astro
@@ -2,7 +2,7 @@
 import Layout from '../../layouts/Layout.astro';
 import Busqueda from '../../components/ActAcademicas/Busqueda.astro';
 import TextoInformativo from '../../components/ActAcademicas/TextoInformativo.astro';
-import CardGrid from '../../components/common/CardGrid.astro';
+import VistaCardGrid from '../../components/views/VistaCardGrid';
 ---
 
 <Layout title="Act. Académicas">
@@ -10,7 +10,7 @@ import CardGrid from '../../components/common/CardGrid.astro';
     <TextoInformativo title="Acceso gratuito a los cursos" sizeText="text-2xl md:text-3xl">
         La inscripción y el acceso a los cursos son <strong>completamente gratuitos</strong>. Sin embargo, si deseas obtener un <strong>certificado</strong> al finalizar, este <strong>tiene un costo adicional.</strong>
     </TextoInformativo>
-    <CardGrid />
+    <VistaCardGrid client:only="react" />
 </Layout>
 
 
