--- a/src/pages/noticias/index.astro
+++ b/src/pages/noticias/index.astro
@@ -2,7 +2,7 @@
 import Layout from '../../layouts/Layout.astro';
 import Busqueda from '../../components/noticias/Busqueda.astro';
 import TextoInformativo from '../../components/ActAcademicas/TextoInformativo.astro';
-import CardGrid from '../../components/noticias/CardGrid.astro';
+import VistaNoticiasGrid from '../../components/views/VistaNoticiasGrid';
 ---
 
 <Layout title="Act. Académicas">
@@ -11,7 +11,7 @@ import CardGrid from '../../components/noticias/CardGrid.astro';
     <TextoInformativo title="Acceso gratuito a los noticias" sizeText="text-2xl md:text-3xl">
         Bienvenido al panel de <strong>Noticias</strong> aqui podras encontrar <strong>todo</strong> sobre lo que paso en estos ultimos tiempos.
     </TextoInformativo>
-    <CardGrid />
+    <VistaNoticiasGrid client:only="react" />
     </main>
 </Layout>
 
