--- a/src/layouts/LayoutPage.astro
+++ b/src/layouts/LayoutPage.astro
@@ -17,7 +17,7 @@ const { title } = Astro.props;
 <html lang="es">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
+		<meta name="description" content="Colegio de enfermeria de la ciudad del Chaco" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/media/cechLogo.png" />
 		<meta name="generator" content={Astro.generator} />
