--- a/src/components/ActAcademicas/detalle/InfoExtra.astro
+++ b/src/components/ActAcademicas/detalle/InfoExtra.astro
@@ -78,10 +78,10 @@ lg:pl-10 xl:pl-10 ">Información Extra</h2>
   <div class="
       w-full | md:w-full | lg:w-2/5 | xl:w-auto xl
       p-6 py-10 | xl:p-auto
-      bg-customBlue 
+      bg-[#187498]  
       rounded-3xl | lg:rounded-r-none shadow-custom
       text-white text-center items-center 
-      xl:hover:pr-64 transition-all duration-300 ease-in-out
+      xl:hover:pr-32 transition-all duration-300 ease-in-out
     ">
     <h3 class="font-bold text-2xl lg:text-3xl 2xl:text-4xl">¿Tienes alguna duda?</h3>
     <p class="pl-2 pt-4">Deja tu pregunta en:</p>
@@ -90,7 +90,7 @@ lg:pl-10 xl:pl-10 ">Información Extra</h2>
       border-2 border-customCyan text-customCyan rounded-3xl inline-block 
       font-medium text-base | md:text-lg | xl:text-xl 
       ">
-    Duisconguerisus@gmail.com
+    dudas.cech@gmail.com
   </p>
   </div>
 </div>
