--- a/src/components/ActAcademicas/TextoInformativo.astro
+++ b/src/components/ActAcademicas/TextoInformativo.astro
@@ -2,7 +2,7 @@
 const { title, borderRadius, sizeText } = Astro.props;
 ---
 
-<div class={`flex py-12 justify-center items-center w-full tracking-tight z-auto`}>
+<div class={`flex pt-12 justify-center items-center w-full tracking-tight z-auto`}>
     <section class={`relative bg-customBlue text-white pl-4 md:px-32 py-4 ${borderRadius} -mt-5 w-full shadow-custom shadow-black/40`}>
         <h3 class=`${sizeText} font-bold text-start md:text-start md:mb-2`>{title}</h3>
         <p class="mb-2 mt-2 text-left max-w-full">
