--- a/src/layouts/LayoutHome.astro
+++ b/src/layouts/LayoutHome.astro
@@ -28,7 +28,7 @@ const { title } = Astro.props;
 		<LoadingSpinner client:load/>
 		<ViewTransitions />
 		<Header />
-		<div class="z-40">
+		<div class="flex self-end lg:self-auto z-40">
 			<MostrarNav client:load />
 		</div>
 
