--- a/src/components/noticias/Busqueda.astro
+++ b/src/components/noticias/Busqueda.astro
@@ -15,7 +15,7 @@ import VistaBotonCrearNoticia from '../../components/views/VistaBotonCrearNotici
         <VistaBotonCrearNoticia client:only="react" />
       </div>
     <!-- Barra de búsqueda a la derecha -->
-    <div class="relative flex items-center ml-4 border-2 border-customGreen rounded-3xl">
+    <div class="relative flex items-center ml-1 md:ml-4 border-2 border-customGreen rounded-3xl">
       
       <input type="text" placeholder="Buscar cursos" class="md:h-10 h-7 md:w-72 w-36 md:px-5 px-3 md:pr-10 text-sm bg-gray-100 rounded-3xl focus:outline-none" />
       <div class="absolute inset-y-0 right-0 flex items-center md:pr-3 pr-3">
