--- a/src/pages/admin/dashboard.astro
+++ b/src/pages/admin/dashboard.astro
@@ -1,6 +1,6 @@
 ---
 // src/pages/admin/dashboard.astro
-import Layout from '../../layouts/Layout.astro';
+import Layout from '../../layouts/LayoutPage.astro';
 import Vista from '../../components/views/ViewTablaAdmin';
 import RouteGuard from '../../components/auth/ProtectedRole';
 import Pastilla from '../../components/ActAcademicas/detalle/Pastilla.astro';
